// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter helper functions renders range field filter 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFormRow euiFormRow--compressed"
      id="random_html_id-row"
    >
      <div
        class="euiFormRow__labelWrapper"
      >
        <label
          class="euiFormLabel euiFormRow__label"
          for="random_html_id"
        >
          Value
        </label>
      </div>
      <div
        class="euiFormRow__fieldWrapper"
      >
        <div
          class="euiFormControlLayout euiFormControlLayoutDelimited"
          id="random_html_id"
        >
          <div
            class="euiFormControlLayout__childrenWrapper"
          >
            <input
              class="euiFieldText euiFormControlLayoutDelimited__input"
              placeholder="Start of range"
              type="string"
              value="0"
            />
            <div
              class="euiText euiText--small euiFormControlLayoutDelimited__delimeter"
            >
              <div
                class="euiTextColor euiTextColor--subdued"
              >
                →
              </div>
            </div>
            <input
              class="euiFieldText euiFormControlLayoutDelimited__input"
              placeholder="End of range"
              type="string"
              value="100"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Filter helper functions renders textfield filter 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--s"
    />
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Value
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
                id="random_html_id"
                placeholder="Enter a value"
                type="text"
                value="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
